Amendments to remove code smells